DLP/ILP_SU/target/generated-sources/antlr4/ILPMLgrammar4exam1819Parser.java
// Generated from ILPMLgrammar4exam1819.g4 by ANTLR 4.4

    package antlr4;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ILPMLgrammar4exam1819Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__45=1, T__44=2, T__43=3, T__42=4, T__41=5, T__40=6, T__39=7, T__38=8, 
		T__37=9, T__36=10, T__35=11, T__34=12, T__33=13, T__32=14, T__31=15, T__30=16, 
		T__29=17, T__28=18, T__27=19, T__26=20, T__25=21, T__24=22, T__23=23, 
		T__22=24, T__21=25, T__20=26, T__19=27, T__18=28, T__17=29, T__16=30, 
		T__15=31, T__14=32, T__13=33, T__12=34, T__11=35, T__10=36, T__9=37, T__8=38, 
		T__7=39, T__6=40, T__5=41, T__4=42, T__3=43, T__2=44, T__1=45, T__0=46, 
		IDENT=47, INT=48, FLOAT=49, STRING=50, ESC=51, LINE_COMMENT=52, COMMENT=53, 
		SPACE=54;
	public static final String[] tokenNames = {
		"<INVALID>", "'/'", "'catch'", "'finally'", "'true'", "'new'", "'!='", 
		"'class'", "'while'", "'{'", "';'", "'='", "'}'", "'extends'", "'if'", 
		"'^'", "'try'", "'<='", "'&'", "'do'", "'autoclose'", "'('", "'*'", "','", 
		"'false'", "'.'", "'method'", "'lambda'", "'var'", "'>='", "'|'", "'=='", 
		"'<'", "'>'", "'!'", "'let'", "'%'", "'else'", "'in'", "'function'", "'super'", 
		"'self'", "')'", "'and'", "'then'", "'+'", "'-'", "IDENT", "INT", "FLOAT", 
		"STRING", "ESC", "LINE_COMMENT", "COMMENT", "SPACE"
	};
	public static final int
		RULE_prog = 0, RULE_globalDef = 1, RULE_classDef = 2, RULE_methodDef = 3, 
		RULE_globalFunDef = 4, RULE_localFunDef = 5, RULE_expr = 6;
	public static final String[] ruleNames = {
		"prog", "globalDef", "classDef", "methodDef", "globalFunDef", "localFunDef", 
		"expr"
	};

	@Override
	public String getGrammarFileName() { return "ILPMLgrammar4exam1819.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ILPMLgrammar4exam1819Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public com.paracamplus.ilp4.interfaces.IASTprogram node;
		public GlobalDefContext globalDef;
		public List<GlobalDefContext> defs = new ArrayList<GlobalDefContext>();
		public ExprContext expr;
		public List<ExprContext> exprs = new ArrayList<ExprContext>();
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public TerminalNode EOF() { return getToken(ILPMLgrammar4exam1819Parser.EOF, 0); }
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public GlobalDefContext globalDef(int i) {
			return getRuleContext(GlobalDefContext.class,i);
		}
		public List<GlobalDefContext> globalDef() {
			return getRuleContexts(GlobalDefContext.class);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(20);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(14); ((ProgContext)_localctx).globalDef = globalDef();
					((ProgContext)_localctx).defs.add(((ProgContext)_localctx).globalDef);
					setState(16);
					_la = _input.LA(1);
					if (_la==T__36) {
						{
						setState(15); match(T__36);
						}
					}

					}
					} 
				}
				setState(22);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(29);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__42) | (1L << T__41) | (1L << T__38) | (1L << T__32) | (1L << T__30) | (1L << T__26) | (1L << T__25) | (1L << T__22) | (1L << T__19) | (1L << T__12) | (1L << T__11) | (1L << T__7) | (1L << T__6) | (1L << T__5) | (1L << T__0) | (1L << IDENT) | (1L << INT) | (1L << FLOAT) | (1L << STRING))) != 0)) {
				{
				{
				setState(23); ((ProgContext)_localctx).expr = expr(0);
				((ProgContext)_localctx).exprs.add(((ProgContext)_localctx).expr);
				setState(25);
				_la = _input.LA(1);
				if (_la==T__36) {
					{
					setState(24); match(T__36);
					}
				}

				}
				}
				setState(31);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(32); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalDefContext extends ParserRuleContext {
		public com.paracamplus.ilp2.interfaces.IASTdeclaration node;
		public GlobalDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalDef; }
	 
		public GlobalDefContext() { }
		public void copyFrom(GlobalDefContext ctx) {
			super.copyFrom(ctx);
			this.node = ctx.node;
		}
	}
	public static class GlobalFunctionDefinitionContext extends GlobalDefContext {
		public GlobalFunDefContext def;
		public GlobalFunDefContext globalFunDef() {
			return getRuleContext(GlobalFunDefContext.class,0);
		}
		public GlobalFunctionDefinitionContext(GlobalDefContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).enterGlobalFunctionDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).exitGlobalFunctionDefinition(this);
		}
	}
	public static class ClassDefinitionContext extends GlobalDefContext {
		public ClassDefContext def;
		public ClassDefContext classDef() {
			return getRuleContext(ClassDefContext.class,0);
		}
		public ClassDefinitionContext(GlobalDefContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).enterClassDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).exitClassDefinition(this);
		}
	}

	public final GlobalDefContext globalDef() throws RecognitionException {
		GlobalDefContext _localctx = new GlobalDefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_globalDef);
		try {
			setState(36);
			switch (_input.LA(1)) {
			case T__7:
				_localctx = new GlobalFunctionDefinitionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(34); ((GlobalFunctionDefinitionContext)_localctx).def = globalFunDef();
				}
				break;
			case T__39:
				_localctx = new ClassDefinitionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(35); ((ClassDefinitionContext)_localctx).def = classDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDefContext extends ParserRuleContext {
		public com.paracamplus.ilp4.interfaces.IASTclassDefinition node;
		public Token name;
		public Token parent;
		public Token IDENT;
		public List<Token> fields = new ArrayList<Token>();
		public MethodDefContext methodDef;
		public List<MethodDefContext> methods = new ArrayList<MethodDefContext>();
		public List<MethodDefContext> methodDef() {
			return getRuleContexts(MethodDefContext.class);
		}
		public TerminalNode IDENT(int i) {
			return getToken(ILPMLgrammar4exam1819Parser.IDENT, i);
		}
		public List<TerminalNode> IDENT() { return getTokens(ILPMLgrammar4exam1819Parser.IDENT); }
		public MethodDefContext methodDef(int i) {
			return getRuleContext(MethodDefContext.class,i);
		}
		public ClassDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).enterClassDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).exitClassDef(this);
		}
	}

	public final ClassDefContext classDef() throws RecognitionException {
		ClassDefContext _localctx = new ClassDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38); match(T__39);
			setState(39); ((ClassDefContext)_localctx).name = match(IDENT);
			setState(42);
			_la = _input.LA(1);
			if (_la==T__33) {
				{
				setState(40); match(T__33);
				setState(41); ((ClassDefContext)_localctx).parent = match(IDENT);
				}
			}

			setState(44); match(T__37);
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__18) {
				{
				{
				setState(45); match(T__18);
				setState(46); ((ClassDefContext)_localctx).IDENT = match(IDENT);
				((ClassDefContext)_localctx).fields.add(((ClassDefContext)_localctx).IDENT);
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__23) {
					{
					{
					setState(47); match(T__23);
					setState(48); ((ClassDefContext)_localctx).IDENT = match(IDENT);
					((ClassDefContext)_localctx).fields.add(((ClassDefContext)_localctx).IDENT);
					}
					}
					setState(53);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(54); match(T__36);
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__20) {
				{
				{
				setState(60); ((ClassDefContext)_localctx).methodDef = methodDef();
				((ClassDefContext)_localctx).methods.add(((ClassDefContext)_localctx).methodDef);
				setState(62);
				_la = _input.LA(1);
				if (_la==T__36) {
					{
					setState(61); match(T__36);
					}
				}

				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(69); match(T__34);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDefContext extends ParserRuleContext {
		public com.paracamplus.ilp4.interfaces.IASTmethodDefinition node;
		public Token name;
		public Token IDENT;
		public List<Token> vars = new ArrayList<Token>();
		public ExprContext body;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode IDENT(int i) {
			return getToken(ILPMLgrammar4exam1819Parser.IDENT, i);
		}
		public List<TerminalNode> IDENT() { return getTokens(ILPMLgrammar4exam1819Parser.IDENT); }
		public MethodDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).enterMethodDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).exitMethodDef(this);
		}
	}

	public final MethodDefContext methodDef() throws RecognitionException {
		MethodDefContext _localctx = new MethodDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_methodDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); match(T__20);
			setState(72); ((MethodDefContext)_localctx).name = match(IDENT);
			setState(73); match(T__25);
			setState(75);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(74); ((MethodDefContext)_localctx).IDENT = match(IDENT);
				((MethodDefContext)_localctx).vars.add(((MethodDefContext)_localctx).IDENT);
				}
			}

			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__23) {
				{
				{
				setState(77); match(T__23);
				setState(78); ((MethodDefContext)_localctx).IDENT = match(IDENT);
				((MethodDefContext)_localctx).vars.add(((MethodDefContext)_localctx).IDENT);
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(84); match(T__4);
			setState(85); ((MethodDefContext)_localctx).body = expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalFunDefContext extends ParserRuleContext {
		public com.paracamplus.ilp2.interfaces.IASTfunctionDefinition node;
		public Token name;
		public Token IDENT;
		public List<Token> vars = new ArrayList<Token>();
		public ExprContext body;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode IDENT(int i) {
			return getToken(ILPMLgrammar4exam1819Parser.IDENT, i);
		}
		public List<TerminalNode> IDENT() { return getTokens(ILPMLgrammar4exam1819Parser.IDENT); }
		public GlobalFunDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalFunDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).enterGlobalFunDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).exitGlobalFunDef(this);
		}
	}

	public final GlobalFunDefContext globalFunDef() throws RecognitionException {
		GlobalFunDefContext _localctx = new GlobalFunDefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_globalFunDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87); match(T__7);
			setState(88); ((GlobalFunDefContext)_localctx).name = match(IDENT);
			setState(89); match(T__25);
			setState(91);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(90); ((GlobalFunDefContext)_localctx).IDENT = match(IDENT);
				((GlobalFunDefContext)_localctx).vars.add(((GlobalFunDefContext)_localctx).IDENT);
				}
			}

			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__23) {
				{
				{
				setState(93); match(T__23);
				setState(94); ((GlobalFunDefContext)_localctx).IDENT = match(IDENT);
				((GlobalFunDefContext)_localctx).vars.add(((GlobalFunDefContext)_localctx).IDENT);
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(100); match(T__4);
			setState(101); ((GlobalFunDefContext)_localctx).body = expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocalFunDefContext extends ParserRuleContext {
		public com.paracamplus.ilp3.interfaces.IASTnamedLambda node;
		public Token name;
		public Token IDENT;
		public List<Token> vars = new ArrayList<Token>();
		public ExprContext body;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode IDENT(int i) {
			return getToken(ILPMLgrammar4exam1819Parser.IDENT, i);
		}
		public List<TerminalNode> IDENT() { return getTokens(ILPMLgrammar4exam1819Parser.IDENT); }
		public LocalFunDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_localFunDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).enterLocalFunDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).exitLocalFunDef(this);
		}
	}

	public final LocalFunDefContext localFunDef() throws RecognitionException {
		LocalFunDefContext _localctx = new LocalFunDefContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_localFunDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103); match(T__7);
			setState(104); ((LocalFunDefContext)_localctx).name = match(IDENT);
			setState(105); match(T__25);
			setState(107);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(106); ((LocalFunDefContext)_localctx).IDENT = match(IDENT);
				((LocalFunDefContext)_localctx).vars.add(((LocalFunDefContext)_localctx).IDENT);
				}
			}

			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__23) {
				{
				{
				setState(109); match(T__23);
				setState(110); ((LocalFunDefContext)_localctx).IDENT = match(IDENT);
				((LocalFunDefContext)_localctx).vars.add(((LocalFunDefContext)_localctx).IDENT);
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(116); match(T__4);
			setState(117); ((LocalFunDefContext)_localctx).body = expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public com.paracamplus.ilp1.interfaces.IASTexpression node;
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
			this.node = ctx.node;
		}
	}
	public static class BindingContext extends ExprContext {
		public Token IDENT;
		public List<Token> vars = new ArrayList<Token>();
		public ExprContext expr;
		public List<ExprContext> vals = new ArrayList<ExprContext>();
		public ExprContext body;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode IDENT(int i) {
			return getToken(ILPMLgrammar4exam1819Parser.IDENT, i);
		}
		public List<TerminalNode> IDENT() { return getTokens(ILPMLgrammar4exam1819Parser.IDENT); }
		public BindingContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).enterBinding(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).exitBinding(this);
		}
	}
	public static class LoopContext extends ExprContext {
		public ExprContext condition;
		public ExprContext body;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public LoopContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).enterLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).exitLoop(this);
		}
	}
	public static class NewContext extends ExprContext {
		public Token className;
		public ExprContext expr;
		public List<ExprContext> args = new ArrayList<ExprContext>();
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode IDENT() { return getToken(ILPMLgrammar4exam1819Parser.IDENT, 0); }
		public NewContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).enterNew(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).exitNew(this);
		}
	}
	public static class VariableContext extends ExprContext {
		public Token var;
		public TerminalNode IDENT() { return getToken(ILPMLgrammar4exam1819Parser.IDENT, 0); }
		public VariableContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).exitVariable(this);
		}
	}
	public static class AlternativeContext extends ExprContext {
		public ExprContext condition;
		public ExprContext consequence;
		public ExprContext alternant;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public AlternativeContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).enterAlternative(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).exitAlternative(this);
		}
	}
	public static class InvocationContext extends ExprContext {
		public ExprContext fun;
		public ExprContext expr;
		public List<ExprContext> args = new ArrayList<ExprContext>();
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public InvocationContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).enterInvocation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).exitInvocation(this);
		}
	}
	public static class AutocloseContext extends ExprContext {
		public Token var;
		public ExprContext expr1;
		public ExprContext expr2;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode IDENT() { return getToken(ILPMLgrammar4exam1819Parser.IDENT, 0); }
		public AutocloseContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).enterAutoclose(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).exitAutoclose(this);
		}
	}
	public static class ConstFloatContext extends ExprContext {
		public Token floatConst;
		public TerminalNode FLOAT() { return getToken(ILPMLgrammar4exam1819Parser.FLOAT, 0); }
		public ConstFloatContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).enterConstFloat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).exitConstFloat(this);
		}
	}
	public static class VariableAssignContext extends ExprContext {
		public Token var;
		public ExprContext val;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(ILPMLgrammar4exam1819Parser.IDENT, 0); }
		public VariableAssignContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).enterVariableAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).exitVariableAssign(this);
		}
	}
	public static class SequenceContext extends ExprContext {
		public ExprContext expr;
		public List<ExprContext> exprs = new ArrayList<ExprContext>();
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public SequenceContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).enterSequence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).exitSequence(this);
		}
	}
	public static class SelfContext extends ExprContext {
		public SelfContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ILPMLgrammar4exam1819Listener ) ((ILPMLgrammar4exam1819Listener)listener).enterSelf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
